--- a/templates/employer/list.html.twig
+++ b/templates/employer/list.html.twig
@@ -36,7 +36,7 @@
             <div id="content">
 
                 <!-- Topbar -->
-                <?php require_once("../../Topbar.php"); ?>
+                {% include "topbar.html.twig" %}
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
@@ -54,7 +54,7 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Tables des Salaire</h6>
                                 </div>
                                 <div class="col-sm-2">
-                                    <a href="personnel.php" class="btn btn-primary btn-user btn-block">
+                                    <a href="{{path('app_employer')}}" class="btn btn-primary btn-user btn-block">
                                         <i class="fas fa-plus"></i> Personnel
                                     </a>
                                 </div>
