--- a/templates/rapport/rapport.html.twig
+++ b/templates/rapport/rapport.html.twig
@@ -28,8 +28,10 @@
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
                 <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-                    <div class="col-lg-12">
+                    <div class="col-lg-2 d-none d-lg-block bg-register-image">
+                        {% include "navbar.html.twig" %}
+                    </div>
+                    <div class="col-lg-10">
                         <div class="p-5">
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Rapport</h1>
@@ -61,7 +63,7 @@
                                 </div>
                                 
                                 <hr>
-                                <form class="user" action="#" method="post">
+                                <form class="user" action="{{path('rapport_day')}}" method="post">
                                     <hr>
                                     <div class="form-group row">
                                         <div class="col-sm-4 mb-3 mb-sm-0">
@@ -70,25 +72,23 @@
                                         </div>
                                         <div class="col-sm-4"></div>
                                         <div class="col-sm-4">
-                                        <a href="#">
-                                                <button type="" name="" id="" class="btn btn-primary btn-user btn-block">
+                                            <button type="" name="" id="" class="btn btn-primary btn-user btn-block">
                                                 Rapport pour chaque Date
                                                 </button> 
-                                            </a>
                                         </div>
                                     </div>
                                     <hr>
                                     <hr>  
                                 </form>
-                                <form class="user" action="#" method="post">
+                                <form class="user" action="{{path('rapport_semain')}}" method="post">
                                     <div class="form-group row">
                                         <div class="col-sm-4">
                                             <input type="date" class="form-control form-control-user" id="date"
-                                                name="datedebutsemain" placeholder="telephone client" required>
+                                                name="datedebu" placeholder="telephone client" required>
                                         </div>
                                         <div class="col-sm-4">
                                             <input type="date" class="form-control form-control-user" id="date"
-                                                name="datefinsemain" placeholder="telephone client" required>
+                                                name="datefin" placeholder="telephone client" required>
                                         </div>
                                         <div class="col-sm-4">
                                             <a href="#">
